# trend-predictor

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.lock.txt
models/: QQQ_hgb_reg.pkl  QQQ_hgb_reg_tuned.pkl  QQQ_logit_cls.pkl  QQQ_logit_cls_tuned.pkl  QQQ_ridge_reg.pkl  QQQ_ridge_reg_tuned.pkl  VFV.TO_hgb_reg.pkl  VFV.TO_hgb_reg_tuned.pkl  VFV.TO_logit_cls.pkl  VFV.TO_logit_cls_tuned.pkl  VFV.TO_ridge_reg.pkl  VFV.TO_ridge_reg_tuned.pkl  XEQT.TO_hgb_reg.pkl  XEQT.TO_hgb_reg_tuned.pkl  XEQT.TO_logit_cls.pkl  XEQT.TO_logit_cls_tuned.pkl  XEQT.TO_ridge_reg.pkl  XEQT.TO_ridge_reg_tuned.pkl
notebooks/: Day1_Ingestion.ipynb  Day2_Cleaning.ipynb  Day3_FeatureEngineering.ipynb  Day4_BaseModeling.ipynb  Day5_ModelEvaluation.ipynb  Day6_WalkForwardBacktest.ipynb  Day7_HyperparameterTuning.ipynb  Day8_BacktestComparison.ipynb  Day9_TresholdSelection.ipynb
reports/: QQQ_hgb_reg_cv.csv  QQQ_logit_cls_cv.csv  QQQ_ridge_reg_cv.csv  VFV.TO_hgb_reg_cv.csv  VFV.TO_logit_cls_cv.csv  VFV.TO_ridge_reg_cv.csv  XEQT.TO_hgb_reg_cv.csv  XEQT.TO_logit_cls_cv.csv  XEQT.TO_ridge_reg_cv.csv  day4_cv_metrics_summary.csv  day6_QQQ_logit_cls_bt.csv  day6_QQQ_ridge_reg_bt.csv  day6_VFV.TO_hgb_reg_bt.csv  day6_XEQT.TO_hgb_reg_bt.csv  day6_XEQT.TO_logit_cls_bt.csv  day6_XEQT.TO_ridge_reg_bt.csv  day6_backtest_metrics.csv  day7_QQQ_hgb_grid.csv  day7_QQQ_logit_grid.csv  day7_QQQ_ridge_grid.csv  day7_VFV.TO_hgb_grid.csv  day7_VFV.TO_logit_grid.csv  day7_VFV.TO_ridge_grid.csv  day7_XEQT.TO_hgb_grid.csv  day7_XEQT.TO_logit_grid.csv  day7_XEQT.TO_ridge_grid.csv  (+15 more)
(+10 files in other folders)
